搭建界面--显示效果

--- a/BTrix-game-simple/public/style.css
+++ b/BTrix-game-simple/public/style.css
@@ -97,10 +97,11 @@
   .current表示当前操作方块
   .fixed表示已经固定的方块
   */
-.none .current .fixed {
+.none, .current, .fixed {
     width: 20px;
     height: 20px;
     box-sizing: border-box;
+    position: absolute;
 }
 
 .none {
